discussion started, more citations added

--- a/mSystems/mSys_MAIN.tex
+++ b/mSystems/mSys_MAIN.tex
@@ -236,6 +236,13 @@ This work is supported by Generalitat Valenciana Prometeo Grants II/2014/050, II
 \bibitem{convergence2} Kendal, W.S., Jorgensen,B. Taylor's power law and fluctuation scaling explained by a central-limit-like convergence. {\it Phys. Rev. E} {\bf 83,} 066115 (2011).
 \bibitem{convergence3} Kendal, W.S., Jorgensen,B. Tweedie convergence: A mathematical basis for Taylor's power law. {\it Phys. Rev. E} {\bf 84,} 066120 (2011).
 
+%discussion
+\bibitem {kilpatrick} {\bf Kilpatrick a M, Ives a R.} 2003. Species interactions can explain Taylor’s power law for ecological time series. Nature {\bf 422}:65–68.
+\bibitem {ballantyne} {\bf Ballantyne IV F, J. Kerkhoff A.} 2007. The observed range for temporal mean-variance scaling exponents can be explained by reproductive correlation. Oikos {\bf 116}:174–180.
+\bibitem {joao} {\bf Stein RR, Bucci V, Toussaint NC, Buffie CG, Rätsch G, Pamer EG, Sander C, Xavier JB.}  2013. Ecological modeling from time-series inference: insight into dynamics and stability of intestinal microbiota. PLoS Comput Biol {\bf 9}:e1003388.
+\bibitem {mehta} {\bf Fisher CK, Mehta P.} 2014. Identifying keystone species in the human gut microbiome from metagenomic timeseries using sparse linear regression. PLoS One {\bf 9}:e102451.
+\bibitem {cohen_taylor} {\bf Cohen JE, Xu M, Schuster WSF}. 2013. Stochastic multiplicative population growth predicts and interprets Taylor ’ s power law of fluctuation scaling Stochastic multiplicative population growth predicts and interprets Taylor ’ s power law of fluctuation scaling. Proc R Soc B Biol Sci {\bf 280}:20122955.
+
 	\bibitem{FD} Weber, J. \textit{et al.} Fluctuation dissipation theorem. {\it Phys. Rev.} {\bf 101}, 1620-6 (1956).
 	\bibitem{FASTX} Gordon, A., Hannon, G.J. FASTX-Toolkit. FASTQ/A shortreads pre-processing tools (2010). http://hannonlab.cshl.edu/fastx\_toolkit/ (accessed 23 Feb 2015).
 	\bibitem{SILVA} Quast C.  \textit{et al.} The SILVA ribosomal RNA gene database project: improved data processing and web-based tools (2013)
