--- a/mSystems/mSys_discussion.tex
+++ b/mSystems/mSys_discussion.tex
@@ -1,4 +1,9 @@
-We have quantitatively characterized whether the microbiota belongs to a healthy individual or a subject corresponding to an altered or pathological state (i.e., altered diet, antibiotic treatment, early gut development, diagnosed IBS). Deciphering the mechanisms of disease requires in depth knowledge of the underlying biological mechanisms. We describe here the macroscopic behavior of disease by a noise-induced phase transition with a control parameter that can be measured by the temporal variability of the microbiome. The microbiota of healthy individuals and of individuals with pathologies represent different phases separated by this noise-induced phase transition. Improved high-throughput sequencing of samples from individuals monitored over time and taxonomic assigning methods will provide a better distinction among pathologies or altered states of the microbiota.
+
+The main feature of this work is to have shown that the microbiota, independently of its condition, follows the Taylor's law. We have seen that the value of beta in each case is always less than the unity (using standard deviation in the law), which is informing us about the community structure. This means that the most abundant elements in the population are less volatile to perturbations in relative terms than the less abundant. The biological explanation for this universal pattern is not clear. There are studies that prove that having this kind of exponents may be due to the negative interactions in the population \cite{kilpatrick}, while others have demonstrated that it may depend on reproductive correlation \cite{ballantyne}. Nevertheless, none of these explanations are enough when we are talking about microbiota as the reproduction term is diffuse, and the interactions between its components are numerous and complex \cite{joao, mehta}.
+
+Model and temporal variation of V.
+
+From the biological perspective, too many questions arise with this work. Knowing that microbiota has universal properties, one of the main relevant questions is which mechanisms are involved in maintaining the population structure in order to have always values of beta below 1...
 
 Specifically, the analysis of the rank stability of the samples of healthy and IBS diagnosed patients studied in our lab\cite{IBS}, suggests that the presence of a \emph{rank stability island} among medium-ranked taxa could be an indicator of a healthy microbiota. 
 
