minor changes in intro (reference against holobiont), results (more text to time evolution of Taylors parameters), and discussion

--- a/mSystems/mSys_discussion.tex
+++ b/mSystems/mSys_discussion.tex
@@ -1,4 +1,4 @@
-One of the mains features of this work is to have shown that the microbiota, independently of its condition, follows the Taylor's law. We have seen that the value of the scaling index in each case is always less than the unity (using standard deviation in the law), which is informing us about the community structure. This means that the most abundant elements in the population are less volatile to perturbations in relative terms than the less abundant. The explanation for this universal pattern is not clear although some hypothesis have been tested in other studies as the presence of negative interactions in the population \cite{kilpatrick}, while others have demonstrated that it may depend on reproductive correlation \cite{ballantyne}. Nevertheless, none of these explanations are enough when we are talking about microbiota as the reproduction term is diffuse, the interactions between its components are not only based on competition \cite{joao, mehta, bucci} and that kind of negative interaction may not effectively yield in values less than the unity when referring to a bacterial species \cite{ramslayer}. In any case, the values obtained in all cases are very similar between them, hence these theoretical questions may be addressed in future works.
+One of the mains features of this work is to have shown that the microbiota, independently of its condition, follows the Taylor's law. We have seen that the value of the scaling index in each case is always less than the unity (using standard deviation), which is informing us about the community structure. This means that the most abundant elements in the population are less volatile to perturbations in relative terms than the less abundant. The explanation for this universal pattern is not clear although some hypothesis have been tested in other studies as the presence of negative interactions in the population \cite{kilpatrick}, while others have demonstrated that it may depend on reproductive correlation \cite{ballantyne}. Nevertheless, none of these explanations are enough when we are talking about microbiota as the reproduction term is diffuse, the interactions between its components are not only based on competition \cite{joao, mehta, bucci} and that kind of negative interaction may not effectively yield in values less than the unity when referring to a bacterial species \cite{ramslayer}. In any case, the values obtained in all cases are very similar between them, what could be suggesting that the community structure is preserved in all the different scenarios that we have studied.
 
 The second parameter is informing about the noise and can be directly related with the variability or the fluctuation amplitude of the population over time, and it is a direct estimator of the stability of the system under study. As we showed in above, the healthy part of each study have lower variability than the non-healthy part when dealing with adult individuals. Interestingly, the variability parameter was higher in the healthy part of the study of the discordant twins suffering from kwashiorkor disease \cite{kwashiorkor}. Taking into account that the infant microbiota is evolving toward a definite, adult state \cite{koenig}, it means that the temporal variability would be greater than in a adult who has reached a stability in his gut microbiota, while our results could be directing in the possibility that this variability is necessary in order to reach that adult state. Furthermore, as we wanted to see how this variability was over time, we calculated the evolution of this parameter for the samples which had enough time sampling. As can be seen in Figure \ref{fig:tempevo1}, the variability of the microbiota has some fluctuations over time. It is interesting to note in Figure \ref{fig:tempevo2} how this parameter can capture the two antibiotic intakes in one of the patients from the study of Dethlefsen and Relman \cite{antibiotic}, especially that it seems to be some resiliance process in the microbiota due to the lower variability increase in the second antibiotic intake.  
 
@@ -10,4 +10,4 @@ Specifically, the analysis of the rank stability of the samples of healthy and I
 
 But we have to be aware that the hypothesis above is too simplistic to be related with the reality. It has been demonstrated that the situation is more complex than to separate healthy people from non-healthy people by compositional terms only as Moya and Ferrer underlines in their review \cite{Moya_trends}. There are several different scenarios that can be possible in which we can consider the microbiota as stable independently of their compositional evolution over time, as for example in their ability to recover the initial composition (resiliance), or if it can recover the original function despite the composition (functional redundancy). What we have showed in this work could be explained as the transitions of a stable microbiota into a dysbiosis state.  
 
-As a first step toward understanding the microbiota stability, the model present some limitations and there is still work to do. From the biological perspective, many questions arise from this work as for example which mechanisms are involved in maintaining the population structure. The nature of the interactions between the elements of the community is surely of great importance in this matter, and it is related to the fitness of the community as has been commented above. To capture these interactions, we could try to use the generalized Lotka-Volterra system of differential equations or other methods which are mathematically similar. There are also other ways in which we could infer the community fitness without taking into account the interactions as has been exposed by Tikhonov \cite{tikhonov}. There is also the possibility to work with the fluctuation-dissipation theorem and try to understand what could mean the 'temperature' in ecological terms.
+As a first step toward understanding the microbiota stability, the model presents some limitations and there is still work to do. From the biological perspective, many questions arise from this work. We have observed the same pattern in Taylor's parameters in all the different conditions we have studied, but a pertinent question is if it is really a universal feature in the huge diversity of microbial niches. Also, another relevant question is which mechanisms are involved in maintaining the population structure. The nature of the interactions between the elements of the community is surely of great importance in this matter, and it is related to the fitness of the community as has been commented above. How we should address the community fitness is not clear, but works as Tikhonov's \cite{tikhonov} could help us to aim in the correct direction toward unraveling the complexity of the microbiota.
