--- a/mSystems/mSys_intro.tex
+++ b/mSystems/mSys_intro.tex
@@ -1,5 +1,5 @@
-The desire to understand the factors that influence human health and cause diseases has always been one of the major driving forces of biological research. As evidence of new concepts 'holobiont' and 'hologenome' is increasing each day \cite{holo1, holo2}, research not only focus on the human physiology but also on the microbial population that surround ourselves. We are populated by a myriad of microorganisms that are interacting with us in several physiological processes such as metabolism of the bile acids \cite{bileacids}, of the choline \cite{choline} or key-route metabolites as short-chain fatty acids \cite{scfa1, scfa2} which are also involved in immune system maturation \cite{scfa3, scfa4}. Human microbiota has been suggested to be closely related to diseases like type 2 diabetes \cite{diabetes2}, cardiovascular disease (CVD) \cite{CVD}, irritable bowel syndrome \cite{IBS}, Crohn's disease \cite{CD}, some affections as obesity \cite{ob1, ob2}, malnutrition \cite{nutr} among other multiple diseases \cite{Moya_trends}. High throughput methods for microbial 16S ribosomal RNA gene and WGS have now begun to reveal the composition of archaeal, bacterial, fungal and viral communities located both, in and on the human body. Modern high-throughput sequencing and bioinformatics tools provide a powerful means of understanding how the human microbiome contributes to health and its potential as a target for therapeutic interventions \cite{microb&health}. To define normal microbiota and how it's compositional changes can origin some diseases are important issues still in need for scientific answers \cite{normal1, normal2}.
+The desire to understand the factors that influence human health and cause diseases has always been one of the major driving forces of biological research. As evidence of new concepts 'holobiont' and 'hologenome' is increasing each day \cite{holo1, holo2}, research not only focus on the human physiology but also on the microbial population that surround ourselves. However, these concepts are still in debate \cite{holo3}. We are populated by a myriad of microorganisms that are interacting with us in several physiological processes such as metabolism of the bile acids \cite{bileacids}, of the choline \cite{choline} or key-route metabolites as short-chain fatty acids \cite{scfa1, scfa2} which are also involved in immune system maturation \cite{scfa3, scfa4}. Human microbiota has been suggested to be closely related to diseases like type 2 diabetes \cite{diabetes2}, cardiovascular disease (CVD) \cite{CVD}, irritable bowel syndrome \cite{IBS}, Crohn's disease \cite{CD}, some affections as obesity \cite{ob1, ob2}, malnutrition \cite{nutr} among other multiple diseases \cite{Moya_trends}. High throughput methods for microbial 16S ribosomal RNA gene and WGS have now begun to reveal the composition of archaeal, bacterial, fungal and viral communities located both, in and on the human body. Modern high-throughput sequencing and bioinformatics tools provide a powerful means of understanding how the human microbiome contributes to health and its potential as a target for therapeutic interventions \cite{microb&health}. To define normal microbiota and how it's compositional changes can origin some diseases are important issues still in need for scientific answers \cite{normal1, normal2}.
 
-Biology has recently acquired new technological and conceptual tools to investigate, model and understand living organisms at the system level, thanks to the spectacular progress in quantitative techniques, large-scale measurement methods and the integration of experimental and computational approaches. In particular, Systems Biology has placed a great effort to unveil the general laws governing the complex behaviour of microbial communities \cite{sysbio&microb, msys1, metasysbio}. Microbiota can be approached under the light of ecological theory where we can find, for instance, general principles as the Taylor's law \cite{taylor}, which relates spatial or temporal variability of the population with its mean. This law, also known as fluctuation scale law, is ubiquitous in the natural world and can be found in several systems as random walks \cite{randomwalks}, stock markets \cite{economics1, economics2}, animal populations \cite{taylor, animal1, animal2}, gene expression \cite{genexpress}, or in the human genome \cite{genome}. Taylor's law has been applied to microbiota in a spatial way in the work of Zhang {\it et al.}, (2014) \cite{isme1}, where they show that this population tend to be in an aggregated way rather than in a random distribution. Despite its ubiquity, it has been studied only in experimental settings \cite{cohen_bac, ramslayer} but never been applied in follow-up studies from microbiota even that a great effort has been made to infer the community structure from a dynamical point of view \cite{cobas, schloss, ravel}  
+Biology has recently acquired new technological and conceptual tools to investigate, model and understand living organisms at the system level, thanks to the spectacular progress in quantitative techniques, large-scale measurement methods and the integration of experimental and computational approaches. In particular, Systems Biology has placed a great effort to unveil the general laws governing the complex behaviour of microbial communities \cite{sysbio&microb, msys1, metasysbio}, even proposing that they have universal dynamics \cite{uni_dynam}. Microbiota can be approached under the light of ecological theory where we can find, for instance, general principles as the Taylor's law \cite{taylor}, which relates spatial or temporal variability of the population with its mean. This law, also known as fluctuation scale law, is ubiquitous in the natural world and can be found in several systems as random walks \cite{randomwalks}, stock markets \cite{economics1, economics2}, animal populations \cite{taylor, animal1, animal2}, gene expression \cite{genexpress}, or in the human genome \cite{genome}. Taylor's law has been applied to microbiota in a spatial way in the work of Zhang {\it et al.}, (2014) \cite{isme1}, where they show that this population tend to be in an aggregated way rather than in a random distribution. Despite its ubiquity, it has been studied only in experimental settings \cite{cohen_bac, ramslayer} but never been applied in follow-up studies from microbiota even that a great effort has been made to infer the community structure from a dynamical point of view \cite{cobas, schloss, ravel}  
 
 Here we present the imprints of health status (healthy or disease) in macroscopic properties of microbiota, by studying its temporal variability. We have analyzed more than 35000 time series of taxa from the gut microbiome of 97 individuals obtained from publicly available high throughput sequencing data on different conditions: diseases, diets, obese status, antibiotic therapy and healthy individuals. Having seen that all cases follows Taylor's law, we use this empirical fact to model how the relative abundances of taxa evolves toward time thanks to the Langevin equation, in a similar way as it was applied recently by Blumm {\it et al.} \cite{ranking}. We use this mathematical framework to explore the temporal stability of the microbiota in different conditions in order to understand how this affects the healthy status of the subjects.
