--- a/mSystems/mSys_MAIN.tex
+++ b/mSystems/mSys_MAIN.tex
@@ -130,7 +130,7 @@
 \author[2]{Manuel Peña}
 \author[1,2]{César Gracia}
 \author[1,3,4,5]{Amparo Latorre}
-\author[1,3,4,5]{Andrés Moya}
+\author[1,3,4,5, \#]{Andrés Moya}
 \author[1,2,\#]{Carlos P. Garay}
 
 \affil[1]{Institute for Integrative Systems Biology (I2SysBio), 46980, Spain.}
@@ -144,7 +144,7 @@
 \maketitle
 \wordcount
 \footnote[0]{$^*$ Equally contributed}
-\footnote[0]{$^\#$ Corresponding author: penagaray@gmail.com}
+\footnote[0]{$^\#$ Corresponding authors: andres.moya@uv.es, penagaray@gmail.com}
 
 \clearpage
 
@@ -189,6 +189,7 @@ This work is supported by Generalitat Valenciana Prometeo Grants II/2014/050, II
 \begin{thebibliography}{99}
 \bibitem{holo1} {\bf Rosenberg E, Zilber-Rosenberg I.} 2016. Microbes Drive Evolution of Animals and Plants: the Hologenome Concept. MBio {\bf 7}:e01395–15–.
 \bibitem{holo2} {\bf Bordenstein SR, Theis KR.} 2015. Host Biology in Light of the Microbiome: Ten Principles of Holobionts and Hologenomes. PLOS Biol {\bf 13}:e1002226.
+\bibitem{holo3} {\bf Moran NA, Sloan DB.} 2015. The Hologenome Concept: Helpful or Hollow? PLoS Biol {\bf 13}:1–10.
 \bibitem{bileacids} {\bf Swann JR, Want EJ, Geier FM, Spagou K, Wilson ID, Sidaway JE, Nicholson JK, Holmes E.} 2011. Systemic gut microbial modulation of bile acid metabolism in host tissue compartments. Proc Natl Acad Sci {\bf 108}:4523–4530.
 \bibitem{choline} {\bf Spencer MD, Hamp TJ, Reid RW, Fischer LM, Zeisel SH, Fodor AA.} 2011. Association between composition of the human gastrointestinal microbiome and development of fatty liver with choline deficiency. Gastroenterology {\bf 140}:976–986.
 \bibitem{scfa1} {\bf Samuel BS, Shaito A, Motoike T, Rey FE, Backhed F, Manchester JK, Hammer RE, Williams SC, Crowley J, Yanagisawa M, Gordon JI}. 2008. Effects of the gut microbiota on host adiposity are modulated by the short-chain fatty-acid binding G protein-coupled receptor, Gpr41. Proc Natl Acad Sci {\bf 105}:16767–16772.
@@ -209,6 +210,7 @@ This work is supported by Generalitat Valenciana Prometeo Grants II/2014/050, II
 \bibitem{sysbio&microb} {\bf Wu H, Tremaroli V, Bäckhed F.} 2015. Linking Microbiota to Human Diseases: A Systems Biology Perspective. Trends Endocrinol Metab {\bf 26}:758–770.
 \bibitem{msys1} {\bf Noecker C, Eng A, Srinivasan S, Theriot CM, Young VB, Jansson JK, Fredricks DN, Borenstein E.} 2016. Metabolic Model-Based Integration of Microbiome Taxonomic and Metabolomic Profiles Elucidates Mechanistic Links between Ecological and Metabolic Variation. mSystems {\bf 1}:e00013–15.
 \bibitem {metasysbio} {\bf Greenblum S, Turnbaugh PJ, Borenstein E.} 2012. Metagenomic systems biology of the human gut microbiome reveals topological shifts associated with obesity and inflammatory bowel disease. Proc Natl Acad Sci {\bf 109}:594–599.
+\bibitem {uni_dynam} {\bf Bashan A, Gibson TE, Friedman J, Carey VJ, Weiss ST, Hohmann EL, Liu Y-Y.} 2016. Universality of human microbial dynamics. Nature {\bf 534}:259–262.
 \bibitem{taylor} {\bf Taylor, L.R.} 1961. Aggregation, Variance and the mean. Nature {\bf 189,} 732-35.
 \bibitem{randomwalks} {\bf de Menezes MA, Barabási A-L.} 2004. Fluctuations in network dynamics. Phys Rev Lett {\bf 92}:1–4.
 \bibitem{economics1} {\bf Mantegna RN, Stanley HE.} 1995. Scaling behaviour in the dynamics of an economic index. Nature {\bf 376}:46–49.
