--- a/mSystems/mSys_results.tex
+++ b/mSystems/mSys_results.tex
@@ -44,7 +44,7 @@ The rank dynamics and stability plot in Figure \ref{fig:corrank} shows the varia
 	\vspace*{-10mm} % Corrects overbox of the figures
 	\includegraphics[width=0.8\textwidth]{results/corrank/IBS_h_A_amplicons_family_Rank.pdf}\vspace*{-3mm} % Corrects overbox of the figures
 	\hspace*{-4.5mm}\includegraphics[width=0.83\textwidth]{results/corrank/IBS_P2_Metatranscriptores_Rank.pdf}
-	\caption{Matrixes showing the rank variation throughout time for the most dominant elements (taxa) and their calculated Rank Stability Index (as discussed in Material and Methods). We show the matrix for samples from a healthy subject (top) and from a subject diagnosed with irritable bowel syndrome (bottom), studied in our lab\cite{IBS}.}
+	\caption{Matrixes showing the rank variation throughout time for the most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods). We show the matrix for samples from a healthy subject (top) and from a subject diagnosed with irritable bowel syndrome (bottom), studied in our lab\cite{IBS}.}
 	\label{fig:corrank}
 \end{figure}
 
@@ -57,12 +57,12 @@ We found the presence of such of \emph{rank stability island} for medium-ranked 
 %%%
 \subsection*{Time dependence of model parameters}
 
-Finally, we have studied the time dependence of the variability $V$ and power law index $\beta$ (see Model under Material and Methods) by using a sliding window approach. The total number of time points are divided in subsets of five points, where next subset is defined by adding next time sampling and by eliminating the earliest one. Both parameters were calculated for each subset against the average time lapse. Figure \ref{fig:tempevo1} shows the variability  $V$ as a function of time for the largest sampling: two individuals in the Caporaso's study\cite{moving} corresponding to the gut microbiota of a male (upper plot) and a female (lower plot). Figure \ref{fig:tempevo2} shows the time evolution of $V$ for patient P2 of the IBS study\cite{IBS} (upper plot) and patient D in the antibiotics study\cite{antibiotic} (lower plot). 
+Finally, we have studied the time dependence of the variability $V$ and power law index $\beta$ (see Model under Material and Methods) by using a sliding window approach. The total number of time points are divided in subsets of five points, where next subset is defined by adding next time sampling and by eliminating the earliest one. Both parameters were calculated for each subset against the average time lapse. Figure \ref{fig:tempevo1} shows the variability  $V$ as a function of time for the largest sampling: two individuals in the Caporaso's study\cite{moving} corresponding to the gut microbiota of a male (upper plot) and a female (lower plot). Figure \ref{fig:tempevo2} shows the time evolution of $V$ for patient P2 of the IBS study\cite{IBS} (upper plot) and patient D in the antibiotics study\cite{antibiotic} (lower plot). Both samples show changes in the variability V with quasi--periodic behavior peaked at about 10 days. Variability grows more for the gut microbiota of the male and share a minimal value around 0.1 with the gut microbiota of the female. The variability of the gut microbiota of P2 decreases from above 0.3 to below 0.2, showing a slow tendency to increase the order of the system.  Antibiotic intake leaks to a quick increase of variability which lasts for a few days to recover ordering. The second antibiotic treatment shows some memory (lower increase of variability) with a slower recovery.
 
 \begin{figure}
 	\includegraphics[width=1.0\textwidth]{results/sliwin/male_mov.pdf}
 	\hspace*{3mm}\includegraphics[width=0.448\textwidth]{results/sliwin/female_mov.pdf}
-\caption{$V$ as a function of time for the two individuals in the Caporaso's study\cite{moving}: samples of gut microbiome of a male (upper plot) and a female (lower plot). Both samples show changes in the variability V with quasi--periodic behavior peaked at about 10 days. Variability grows more for the gut microbiota of the male and share a minimal value around 0.1 with the gut microbiota of the female.}
+\caption{$V$ as a function of time for the two individuals in the Caporaso's study\cite{moving}: samples of gut microbiome of a male (upper plot) and a female (lower plot).}
 \label{fig:tempevo1}
 \end{figure}
 
@@ -70,7 +70,6 @@ Finally, we have studied the time dependence of the variability $V$ and power la
 	\centering 
  	\includegraphics[width=0.8\textwidth]{results/sliwin/patP2_IBS.pdf}
   	\includegraphics[width=1.0\textwidth]{results/sliwin/patD_antibio.pdf} 
-\caption{$V$ as a function of time for patient P2 of the IBS study\cite{IBS} (upper plot) and patient D in the antibiotics study\cite{antibiotic} (lower plot). The variability 
-of the gut microbiota of P2 decreases from above 0.3 to below 0.2, showing a slow tendency to increase the order of the system.  Antibiotic intake leaks to a quick increase of variability which lasts for a few days to recover ordering. The second antibiotic treatment shows some memory (lower increase of variability) with a slower recovery. NOTE: The blue vertical lines in the lower plot are showing the periods of antibiotic treatment.}
+\caption{$V$ as a function of time for patient P2 of the IBS study\cite{IBS} (upper plot) and patient D in the antibiotics study\cite{antibiotic} (lower plot). The blue vertical lines in the lower plot are showing the periods of antibiotic treatment.}
 \label{fig:tempevo2}
 \end{figure}
