--- a/mSystems/mSys_MAIN.tex
+++ b/mSystems/mSys_MAIN.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{0.2.0}
+\newcommand\releasecode{0.3.0}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -27,8 +27,8 @@
 \geometry{textheight=22.5cm} % 22cm for single-space, 22.5cm for double-space
 
 % watermarks (time consuming!)
-\newwatermark[allpages,color=blue!4,angle=45,scale=9,xpos=-40,ypos=0]{DRAFT}
-\newwatermark[allpages,color=blue!12,angle=0,scale=1,xpos=0,ypos=137]{
+\newwatermark[allpages,color=PineGreen!4,angle=45,scale=9,xpos=-40,ypos=0]{DRAFT}
+\newwatermark[allpages,color=PineGreen!12,angle=0,scale=1,xpos=0,ypos=137]{
 \emph{mSystems} \LaTeX\ manuscript release \releasecode}
 
 % helps to keep figures from being orphaned on a page by themselves
@@ -130,7 +130,7 @@
 \author[2]{Manuel Peña}
 \author[1,2]{César Gracia}
 \author[1,3,4,5]{Amparo Latorre}
-\author[1,3,4,5, \#]{Andrés Moya}
+\author[1,3,4,5,\#]{Andrés Moya}
 \author[1,2,\#]{Carlos P. Garay}
 
 \affil[1]{Institute for Integrative Systems Biology (I2SysBio), 46980, Spain.}
@@ -180,7 +180,7 @@ microbiome, systems biology, ecological modeling, metagenomics, stability
 \clearpage
 
 \section*{Acknowledgments}
-Authors declare that there are no competing financial interests in relation to the work described here. 
+Authors declare that there are no competing financial interests in relation to the work described here. We thereby express our acknowledgement to Bull/Atos and Micron Technology for providing us with the PCIe SSD card Micron P420m HHHL as a free-of-charge sample for high performance throughput database testing purposes.
 
 \section*{Funding Information}
 This work is supported by Generalitat Valenciana Prometeo Grants II/2014/050, II/2014/065, by the Spanish Grants FPA2011-29678, BFU2012-39816-C02-01 of MINECO and by PITN-GA-2011-289442-INVISIBLES. JMM \& DMM acknowledge FPI and FISABIO fellowships. \todo{Modificar becas de JMM y DMM ¿poner algún grant más?}
@@ -250,8 +250,7 @@ This work is supported by Generalitat Valenciana Prometeo Grants II/2014/050, II
 \bibitem {bucci}  {\bf Bucci V, Tzen B, Li N, Simmons M, Tanoue T, Bogart E, Deng L, Yeliseyev V, Delaney ML, Liu Q, Olle B, Stein RR, Honda K, Bry L, Gerber GK.} 2016. MDSINE: Microbial Dynamical Systems INference Engine for microbiome time-series analyses. Genome Biol {\bf 17}:121.
 \bibitem {cohen_taylor} {\bf Cohen JE, Xu M, Schuster WSF}. 2013. Stochastic multiplicative population growth predicts and interprets Taylor ’ s power law of fluctuation scaling Stochastic multiplicative population growth predicts and interprets Taylor ’ s power law of fluctuation scaling. Proc R Soc B Biol Sci {\bf 280}:20122955.
 \bibitem {koenig} {\bf Koenig JE, Spor A, Scalfone N, Fricker AD, Stombaugh J, Knight R, Angenent LT, Ley RE.} 2011. Succession of microbial consortia in the developing infant gut microbiome. Proc Natl Acad Sci {\bf 108} :4578–4585.
-\bibitem {tikhonov} {\bf  Tikhonov M.} 2016. Community-level cohesion without cooperation. Elife {\bf 5}. 
-
+\bibitem {tikhonov} {\bf  Tikhonov M.} 2016. Community-level cohesion without cooperation. Elife {\bf 5}.  \todo{Revisar referencias a partir de aquí: si proceden una vez que CC no se incluye y, en caso aformativo, adaptar el formato}
 	\bibitem{FD} Weber, J. \textit{et al.} Fluctuation dissipation theorem. {\it Phys. Rev.} {\bf 101}, 1620-6 (1956).
 	\bibitem{FASTX} Gordon, A., Hannon, G.J. FASTX-Toolkit. FASTQ/A shortreads pre-processing tools (2010). http://hannonlab.cshl.edu/fastx\_toolkit/ (accessed 23 Feb 2015).
 	\bibitem{SILVA} Quast C.  \textit{et al.} The SILVA ribosomal RNA gene database project: improved data processing and web-based tools (2013)
