--- a/mSystems/mSys_discussion.tex
+++ b/mSystems/mSys_discussion.tex
@@ -1,13 +1,13 @@
-One of the mains features of this work is to have shown that the microbiota, independently of its condition, follows the Taylor's law. We have seen that the value of the scaling index in each case is always less than the unity (using standard deviation), which is informing us about the community structure. This means that the most abundant elements in the population are less volatile to perturbations in relative terms than the less abundant. The explanation for this universal pattern is not clear although some hypothesis have been tested in other studies as the presence of negative interactions in the population \cite{kilpatrick}, while others have demonstrated that it may depend on reproductive correlation \cite{ballantyne}. Nevertheless, none of these explanations are enough when we are talking about microbiota as the reproduction term is diffuse, the interactions between its components are not only based on competition \cite{joao, mehta, bucci} and that kind of negative interaction may not effectively yield in values less than the unity when referring to a bacterial species \cite{ramslayer}. In any case, the values obtained in all cases are very similar between them, what could be suggesting that the community structure is preserved in all the different scenarios that we have studied.
+One of the mains features of this work is to have shown that, independently of its condition, the microbiota follows the Taylor's law. We have seen that the value of the scaling index in each case is always less than the unity (using standard deviation as the measurement for dispersion), which is informing us about the community structure. This means that, in relative terms, the most abundant elements in the population are less volatile to perturbations than the less abundant ones. The explanation for this universal pattern is not clear although some hypothesis have been tested in other studies, as the presence of negative interactions in the population \cite{kilpatrick}, or the demonstration that it may depend on reproductive correlation \cite{ballantyne}. Nevertheless, none of these explanations are enough when we are talking about microbiota as the reproduction term is diffuse, the interactions between its components are not only based on competition \cite{joao, mehta, bucci} and that even that kind of negative interaction may not effectively yield in values less than the unity when referring to a bacterial species \cite{ramslayer}. Anyhow, the values obtained in all cases are very similar among them, which could be suggesting that the community structure is preserved throughout the different scenarios that we have studied.
 
-The second parameter is informing about the noise and can be directly related with the variability or the fluctuation amplitude of the population over time, and it is a direct estimator of the stability of the system under study. As we showed in above, the healthy part of each study have lower variability than the non-healthy part when dealing with adult individuals. Interestingly, the variability parameter was higher in the healthy part of the study of the discordant twins suffering from kwashiorkor disease \cite{kwashiorkor}. Taking into account that the infant microbiota is evolving toward a definite, adult state \cite{koenig}, it means that the temporal variability would be greater than in a adult who has reached a stability in his gut microbiota, while our results could be directing in the possibility that this variability is necessary in order to reach that adult state. Furthermore, as we wanted to see how this variability was over time, we calculated the evolution of this parameter for the samples which had enough time sampling. As can be seen in Figure \ref{fig:tempevo1}, the variability of the microbiota has some fluctuations over time. It is interesting to note in Figure \ref{fig:tempevo2} how this parameter can capture the two antibiotic intakes in one of the patients from the study of Dethlefsen and Relman \cite{antibiotic}, especially that it seems to be some resiliance process in the microbiota due to the lower variability increase in the second antibiotic intake.  
+The second parameter is informing about the noise and can be directly related with the variability or the fluctuation amplitude of the population over time. It is a direct estimator of the stability of the system under study. As we showed above, the healthy subset of each study have lower variability than the non-healthy subset when dealing with adult individuals. Interestingly, the variability parameter was higher in the healthy subset for the study of the discordant twins suffering from kwashiorkor disease \cite{kwashiorkor}. Taking into account that the infant microbiota is evolving toward a definite, adult state \cite{koenig}, it means that the temporal variability would be greater than in a adult who has reached a stability in his gut microbiota, while our results could be directing in the possibility that this variability is necessary in order to reach that adult state  \todo{<-review the wording of the whole sentence}. Furthermore, as we wanted to see how this variability was over time, we calculated the evolution of this parameter for the samples which had enough time sampling \todo{<-we should clarify which is and why we take that number as the minimum number of time samples}. As can be seen in Figure \ref{fig:tempevo1}, the variability of the microbiota has some fluctuations over time. It is interesting to note in Figure \ref{fig:tempevo2} how this parameter can capture the two antibiotic intakes in one of the patients from the study of Dethlefsen and Relman \cite{antibiotic}, especially that it seems to be some resilience process in the microbiota due to the lower variability increase in the second antibiotic intake.  
 
-The primary hypothesis of this work is that having a healthy microbiota means, in adult individuals, that population is stable in time and does not have huge flips or jumps into another states. In order to use the valuable information which gives us the empirical law of Taylor's work, we propose the use of Langevin equation to model how the ranking stability evolves in time. While we can measure directly the component of the noise of the system as their variability, the other main term needs to be inferred from the model. This term, which we have named as 'fitness', is the one that gives the ability to the system to be stable to a possible perturbations. In ecological terms, this could mean the nature of interactions that are present between the bacteria, between bacteria and other minority populations as fungi or archaea, between bacteria and the viral component in the microbiota, and the interactions between host and the whole microbiota. Being this a first step to model the temporal stability of the microbiota and due to its complicated nature, we have calculated the fitness term using the fluctuation-dissipation theorem as a first approximation. Thus, the fitness of the microbiota still remains to be modeled in future works in order to make the model more accurate and with a higher predictive power. 
+The primary hypothesis of this work is that, in adults, having a healthy microbiota means that population is stable in time and does not have huge flips or jumps into another states. In order to use the valuable information which gives us the empirical law of Taylor's work, we propose the use of Langevin equation to model how the ranking stability evolves in time. While we can measure directly the component of the noise of the system as their variability, the other main term needs to be inferred from the model. This term, which we have named as 'fitness', is the one that gives the ability to the system to be stable to potential perturbations. In ecological terms, this could mean the nature of interactions that are present among the bacteria, between bacteria and other minority populations as fungi or archaea, between bacteria and the viral component in the microbiota, and the interactions between host and the whole microbiota. Being this a first step to model the temporal stability of the microbiota and due to its complicated nature, we have calculated the fitness term using the fluctuation-dissipation theorem as a first approximation. Thus, the fitness of the microbiota still remains to be modelled in future works in order to make the model more accurate and with a higher predictive power. 
 
-By solving the Langevin differential equation, we can obtain a phase diagram where each microbiota sample can be placed according to its fitness and variability in one of the two phases according to the ranking stability of the system. As we can see in the phase space in Figure \ref{fig:main3}, we are showing three different conditions that could happen. First, we can have a healthy microbiota which could have some fluctuations as showed by one of the subjects of Caporasso et al study \cite{moving}. Because the fitness of this cases will be high enough, the temporal variability will not place the microbiota in the unstable phase of the diagram. Second, we have a subject from the study of Dethlefsen and Relman \cite{antibiotic} which is perturbed twice by an antibiotic intake. His microbiota is altered enough to loose its stability and then be placed in the unstable part, being more sensible to a possible perturbations as, for example, opportunist infections. Third, the subject is already in the unstable phase due to some healthy issue as IBS, as can be observed in one of the patients from Durban et al study \cite{IBS}. It is shown also that this subject improved its healthy status in the time when the experiment was done, implying that his microbiota also recovered the lost stability. 
+By solving the Langevin differential equation, we can obtain a phase diagram where each microbiota sample can be placed according to its fitness and variability in one of two phases according to the ranking stability of the system. As we can see in the phase-space in Figure \ref{fig:main3}, we are showing three different conditions that could happen. First, we can have a healthy microbiota which could have some fluctuations as showed by one of the subjects of Caporasso et al study \cite{moving}. Because the fitness of this cases will be high enough, the temporal variability will not place the microbiota in the unstable phase of the diagram. Second, we have a subject from the study of Dethlefsen and Relman \cite{antibiotic} which is perturbed twice by an antibiotic intake. His microbiota is altered enough to lose its stability, and hence be placed in the unstable part. So located, it is more sensible to potential perturbations as, for example, opportunist infections. Third and last condition, the subject is already in the unstable phase due to some healthy issue as IBS. This can be observed in one of the patients from Durban et al study \cite{IBS}. In addition, it was shown that this subject improved its healthy status in the time when the experiment was done, implying that his microbiota also recovered the lost stability. 
 
-Specifically, the analysis of the rank stability of the samples of healthy and IBS diagnosed patients studied in our lab\cite{IBS}, suggests that the presence of a \emph{rank stability island} among medium-ranked taxa could be an indicator of a healthy microbiota. (to complete)
+Specifically, the analysis of the rank stability of the samples of healthy and IBS diagnosed patients studied in our lab\cite{IBS}, suggests that the presence of what we called a \emph{rank stability island} among medium-ranked taxa could be an indicator of a healthy microbiota. \todo{<-review}
 
-But we have to be aware that the hypothesis above is too simplistic to be related with the reality. It has been demonstrated that the situation is more complex than to separate healthy people from non-healthy people by compositional terms only as Moya and Ferrer underlines in their review \cite{Moya_trends}. There are several different scenarios that can be possible in which we can consider the microbiota as stable independently of their compositional evolution over time, as for example in their ability to recover the initial composition (resiliance), or if it can recover the original function despite the composition (functional redundancy). What we have showed in this work could be explained as the transitions of a stable microbiota into a dysbiosis state.  
+However, we have to be aware that the hypothesis above is too simplistic to be directly related with reality. It has been demonstrated that the situation is more complex than the outlook provided separating healthy people from non-healthy people just by compositional terms, as Moya and Ferrer underline in their recent review \cite{Moya_trends}. There are several different feasible scenarios in which we can consider the microbiota as stable independently of their compositional evolution over time. For example, depending on their ability to recover the initial composition (resilience), or whether it can recover the original function despite the composition (functional redundancy). What we have shown in this work could be explained as the transitions of a stable microbiota into a dysbiosis state.  
 
-As a first step toward understanding the microbiota stability, the model presents some limitations and there is still work to do. From the biological perspective, many questions arise from this work. We have observed the same pattern in Taylor's parameters in all the different conditions we have studied, but a pertinent question is if it is really a universal feature in the huge diversity of microbial niches. Also, another relevant question is which mechanisms are involved in maintaining the population structure. The nature of the interactions between the elements of the community is surely of great importance in this matter, and it is related to the fitness of the community as has been commented above. How we should address the community fitness is not clear, but works as Tikhonov's \cite{tikhonov} could help us to aim in the correct direction toward unraveling the complexity of the microbiota.
+As a first step toward understanding the microbiota stability, the model presents some limitations and there is still work to do. From the biological perspective, many questions arise from this work. We have observed the same pattern in Taylor's parameters in all the different conditions we have studied, but a pertinent question is whether it is really a universal feature in the huge diversity of microbial niches. Furthermore, another relevant question is which mechanisms are involved in maintaining the population structure. The nature of the interactions among the elements of the community is surely of great importance in this matter, and it is related to the fitness of the community as has been commented above. How we should address the community fitness is not clear, but works as Tikhonov's \cite{tikhonov} could help us to aim at the correct direction toward unraveling the complexity of the microbiota.
